# brewblox-ctl-lib

./: .env  .gitignore  .travis.yml  Pipfile  README.md  azure-pipelines.yml  build-docker.sh  dev-deploy.sh  influx_rename.py  push-docker.sh  pyproject.toml  tox.ini
brewblox_ctl_lib/: cli.py  commands.py  config_commands.py  const.py  couchdb_backup.py  discovery.py  lib_utils.py  loader.py  log_command.py  migrate.py  migrate_command.py  migration.py  setup_command.py  utils.py
brewblox_ctl_lib/commands/: add_device.py  backup.py  database.py  debug.py  diagnostic.py  service.py  setup.py  spark.py  update.py
brewblox_ctl_lib/config_files/: docker-compose_amd64.yml  docker-compose_armhf.yml
brewblox_ctl_lib/config_files/amd64/: docker-compose.shared.yml  docker-compose.yml
brewblox_ctl_lib/config_files/armhf/: docker-compose.shared.yml  docker-compose.yml
brewblox_ctl_lib/data/amd64/: docker-compose.shared.yml
brewblox_ctl_lib/data/armhf/: docker-compose.shared.yml  docker-compose.yml
brewblox_ctl_lib/data/config/: docker-compose.shared.yml  docker-compose.yml
docker/: Dockerfile  before_build.sh
test/: test_cli.py  test_commands.py  test_config_commands.py  test_couchdb_backup.py  test_discovery.py  test_loader.py  test_log_command.py  test_migrate.py  test_migration.py  test_setup_command.py  test_utils.py
test/commands/: test_add_device.py  test_backup.py  test_database.py  test_diagnostic.py  test_service.py  test_setup.py  test_spark.py  test_update.py
