[tool.poetry]
name = "brewblox-ctl-lib"
version = "0.5.5"
description = "Install-specific brewblox-ctl commands"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5"
brewblox-ctl = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
flake8 = "^3.7.9"
autopep8 = "^1.5"
pytest-mock = "^2.0.0"
flake8-quotes = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
