[tool.poetry]
name = "brewblox-ctl-lib"
version = "0.5.5"
description = "Install-specific brewblox-ctl commands"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5,<4"
brewblox-ctl = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pytest-mock = "^3.5.1"
flake8-quotes = "^3.2.0"
httpretty = "^1.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
