[tool.poetry]
name = "brewblox-ctl-lib"
version = "0.5.5"
description = "Install-specific brewblox-ctl commands"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4"
brewblox-ctl = "^0.26.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
pytest-flake8 = "^1.0.7"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
pytest-mock = "^3.6.1"
flake8-quotes = "^3.2.0"
httpretty = "1.0.5"
importlib-metadata = "<4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
